@@ -1,0 +1,9 @@
+package com.kaylerrenslow.a3plugin.lang.sqf.psi.impl;
+
+import com.intellij.psi.PsiReference;
+
+/**
+ * Created by Kayler on 03/23/2016.
+ */
+public interface SQFRefactorableReference extends PsiReference{
+}
