@@ -1,10 +1,15 @@
 package com.kaylerrenslow.a3plugin.lang.sqf.psi.impl.references;
 
 import com.intellij.openapi.util.TextRange;
-import com.intellij.psi.*;
+import com.intellij.psi.PsiElement;
+import com.intellij.psi.PsiNamedElement;
 import com.intellij.psi.tree.IElementType;
 import com.intellij.util.IncorrectOperationException;
+import com.kaylerrenslow.a3plugin.lang.sqf.psi.SQFScope;
 import com.kaylerrenslow.a3plugin.lang.sqf.psi.SQFTypes;
+import com.kaylerrenslow.a3plugin.lang.sqf.psi.SQFVariable;
+import com.kaylerrenslow.a3plugin.lang.sqf.psi.helpers.SQFPsiUtil;
+import com.kaylerrenslow.a3plugin.lang.sqf.psi.impl.SQFRefactorableReference;
 import com.kaylerrenslow.a3plugin.lang.sqf.psi.mixin.SQFVariableNamedElement;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -12,7 +17,7 @@ import org.jetbrains.annotations.Nullable;
 /**
  * Created by Kayler on 03/20/2016.
  */
-public class SQFVariableReference implements PsiReference{
+public class SQFVariableReference implements SQFRefactorableReference{
 
 	private final String variable;
 	private final PsiNamedElement myElement;
@@ -34,11 +39,9 @@ public class SQFVariableReference implements PsiReference{
 		return TextRange.allOf(this.getCanonicalText());
 	}
 
-
 	@Nullable
 	@Override
 	public PsiElement resolve() {
-//		System.out.println("SQFVariableReference.resolve");
 		return this.myElement;
 	}
 
@@ -60,17 +63,22 @@ public class SQFVariableReference implements PsiReference{
 
 	@Override
 	public boolean isReferenceTo(PsiElement element) {
-		if(!(element instanceof SQFVariableNamedElement)){
+		if (!(element instanceof SQFVariableNamedElement)){
 			return false;
 		}
-		if(myVariableElementType == SQFTypes.LANG_VAR){
+		if (myVariableElementType == SQFTypes.LANG_VAR){
 			return false;
 		}
 		SQFVariableNamedElement other = (SQFVariableNamedElement) element;
-		PsiElement selfResolve = resolve();
-		boolean referenceTo =other.getName().equals(getCanonicalText()) && selfResolve != other;
-		if(myVariableElementType == SQFTypes.LOCAL_VAR){
-			return referenceTo && other.getContainingFile() == selfResolve.getContainingFile();
+		SQFVariable meAsVariable = (SQFVariable)resolve();
+
+		boolean referenceTo = other.getName().equals(getCanonicalText()) && resolve() != other;
+
+		if (myVariableElementType == SQFTypes.LOCAL_VAR){
+			SQFScope myScope = SQFPsiUtil.getCurrentScopeForVariable(meAsVariable);
+			SQFScope otherScope = SQFPsiUtil.getCurrentScopeForVariable((SQFVariable) element);
+			referenceTo = referenceTo && myScope == otherScope && other.getContainingFile() == resolve().getContainingFile();
+			return referenceTo;
 		}
 		return referenceTo;
 	}
