@@ -1,0 +1,8 @@
+package com.kaylerrenslow.a3plugin.lang.sqf.psi.mixin;
+
+/**
+ * Created by Kayler on 03/23/2016.
+ */
+public interface SQFVariableBase{
+	String getVarName();
+}
