@@ -1,0 +1,9 @@
+package com.kaylerrenslow.a3plugin.lang.sqf.psi.mixin;
+
+import com.intellij.psi.PsiElement;
+
+/**
+ * Created by Kayler on 03/23/2016.
+ */
+public interface SQFVariableElement extends PsiElement, SQFVariableBase{
+}
