@@ -6,6 +6,6 @@ import com.intellij.psi.tree.IElementType;
 /**
  * Created by Kayler on 03/19/2016.
  */
-public interface SQFVariableNamedElement extends PsiNameIdentifierOwner{
+public interface SQFVariableNamedElement extends PsiNameIdentifierOwner, SQFVariableBase{
 	IElementType getVariableType();
 }
